@@ -1,5 +1,7 @@
 1999-02-23  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
+	* gnome-metadata.c (unlock): Do not access database-> here.
+
 	* gnome-sound.c (gnome_sound_shutdown): Make the sound file
 	descriptor be in sync with reality.
 
